Fixing the styling on smaller devices.

--- a/docroot/sites/all/themes/son/sass/pages.scss
+++ b/docroot/sites/all/themes/son/sass/pages.scss
@@ -58,10 +58,12 @@ body {
   }
 }
 
-#navigation {
-  position: absolute;
-  bottom: 0;
-  right: 2em;
+@media all and (min-width: 960px) {
+  #navigation {
+    position: absolute;
+    bottom: 0;
+    right: 2em;
+  }
 }
 
 .region-header {
